--- a/currency-converter-ui/src/app/currency/currency.component.html
+++ b/currency-converter-ui/src/app/currency/currency.component.html
@@ -44,7 +44,7 @@
 
     <div class="content-align">
       <button mat-raised-button color="primary" class="element-margin" type="submit">Convert</button>
-      <button mat-raised-button color="accent" class="element-margin" type="reset">Reset</button>
+      <button mat-raised-button color="accent" class="element-margin" type="reset" (click)="onReset()">Reset</button>
     </div>
   </form>
 </div>
