--- a/currency-converter-ui/src/app/currency/currency.component.html
+++ b/currency-converter-ui/src/app/currency/currency.component.html
@@ -7,7 +7,7 @@
     <div class="content-align">
       <mat-form-field appearance="fill" class="element-margin">
         <mat-label>Base Currency</mat-label>
-        <mat-select [formControl]="fromCurrencyControl" required>
+        <mat-select [formControl]="fromCurrencyControl" [(ngModel)]="fromCurrInitial" required>
           <mat-option>--</mat-option>
           <mat-option *ngFor="let currency of fromCurrency" [value]="currency">
             {{currency.symbol}}
@@ -25,7 +25,7 @@
     <div class="content-align">
       <mat-form-field appearance="fill" class="element-margin">
         <mat-label>Requested Currency</mat-label>
-        <mat-select [formControl]="toCurrencyControl" required>
+        <mat-select [formControl]="toCurrencyControl" [(ngModel)]="toCurrInitial" required>
           <mat-option>--</mat-option>
           <mat-option *ngFor="let currency of toCurrency" [value]="currency">
             {{currency.symbol}}
