--- a/currency-converter-ui/src/app/currency/currency.component.html
+++ b/currency-converter-ui/src/app/currency/currency.component.html
@@ -1,6 +1,6 @@
 <div class="content content-align header-style">
-  <h2>Currency Converter</h2>
-</div>>
+  <h2 class="header-title">Currency Converter</h2>
+</div>
 
 <div class="content main-content">
   <form [formGroup]="exchangeForm" (ngSubmit)="onSubmit()">
