Adding conversion rate date used

--- a/currency-converter-ui/src/app/currency/currency.component.html
+++ b/currency-converter-ui/src/app/currency/currency.component.html
@@ -38,7 +38,7 @@
 
     <div class="content-align" *ngIf="isExchanged">
       <mat-card>
-        <mat-card-content>{{responseStr}}<br><h2>{{resultCash}}</h2></mat-card-content>
+        <mat-card-content>{{responseStr}}<br><h2>{{resultCash}}</h2><br>{{dateStr}}</mat-card-content>
       </mat-card>
     </div>
 
